syntax = "proto3";

package com.example.grpc;

message GetDetailsRequest {
  string email = 1;
}

message GetDetailsResponse {
  string password = 1;
  repeated string roles = 2;
}

message GetEmailUniqueRequest{
  string email = 1;
}

message GetEmailUniqueResponse{
  bool result = 1;
}

message RegisterUserRequest{
  string name = 1;
  string surname = 2;
  int32 age = 3;
  string email = 4;
  string city = 5;
  string password = 6;
  repeated string role = 7;
}

message RegisterUserResponse {
  int64 id = 1;
}

message GetProfileInformationResponse {
  int64 id = 1;
  string name = 2;
  string surname = 3;
  int32 age = 4;
  string city = 5;
  int32 friendCount = 6;
  string registerDate = 7;
  string status = 8;
}

service UserService{
  rpc getUserDetails (GetDetailsRequest) returns (GetDetailsResponse);
  rpc getEmailUnique (GetEmailUniqueRequest) returns (GetEmailUniqueResponse);
  rpc registerUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc getProfileInformation (GetDetailsRequest) returns (GetProfileInformationResponse);
}